# freecad-mcp

./: .gitignore  .mcp.json  CLAUDE.md  pyproject.toml
.claude/: orchestrator.md  settings.json
.claude/context/: arch-swe-accessibility-reference.md  arch-swe-doors-windows-daylight-reference.md  arch-swe-fire-safety-reference.md  arch-swe-parking-reference.md  arch-swe-room-dimensions-reference.md  arch-swe-stairs-ramps-reference.md  arch-swe-structural-reference.md  architecture.md  bbr-reference.md  designs-store.md  freecad-arch-guide.md  freecad-drawings.md  freecad-grouping.md  freecad-modeling-guide.md  freecad-origins.md  freecad-patterns.md  freecad-source.md  freecad-visibility.md  known-issues.md  mcp-role-tagging.md  tool-lifecycle.md
.claude/hooks/: auto-save.py
.claude/rules/: development-patterns.md  skill-conventions.md
.claude/skills/adding-mcp-tool/: SKILL.md
.claude/skills/architecting-in-freecad/: SKILL.md
.claude/skills/architecting-in-freecad/reference/: arch-api-reference.md  architectural-standards.md
.claude/skills/debugging-rpc-connection/: SKILL.md
.claude/skills/exporting-freecad-to-web/: SKILL.md
.claude/skills/modeling-in-freecad/: SKILL.md
.claude/skills/preparing-release/: SKILL.md
.claude/skills/reorganizing-freecad-document/: SKILL.md
.claude/skills/scaffolding-skill/: SKILL.md
.claude/skills/testing-mcp-tools/: SKILL.md
addon/FreeCADMCP/: InitGui.py
addon/FreeCADMCP/rpc_server/: parts_library.py  rpc_server.py  serialize.py
scripts/: setup-freecad-source.sh
src/freecad_mcp/: server.py
(+4 files in other folders)
